# perplexme

./: CLAUDE.md  PLAN.md  README.md  kgx.md  pyproject.toml
src/: __init__.py  analysis.py  calculate_sentence_perplexity.py  cli_common.py  compare_entity_edge_perplexity.py  config.py  data_loader.py  entity_perplexity.py  main.py  main_entity_perplexity.py  perplexity.py  sentence_generator.py
tests/: __init__.py  test_analysis.py  test_data_loader.py  test_integration.py  test_perplexity.py  test_sentence_generator.py
tests/fixtures/sample_data/: edges.jsonl  nodes.jsonl
